--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
             }
 
             .banner-text {
-                font-size: 2rem;
-                margin-right: 50px;
+                font-size: 1.8rem;
+                margin-right: 40px;
             }
 
             .about h2 {
@@ -307,7 +307,7 @@
 
             .info-box img {
                 width: 100%;
-                height: 150px;
+                height: 200px;
             }
 
             .info-box h3 {
@@ -332,7 +332,7 @@
             }
 
             .historical-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
                 gap: 20px;
             }
 
