--- a/index.html
+++ b/index.html
@@ -390,10 +390,10 @@
                 </div>
                 <div class="info-box">
                     <img src="STUBBY3.jpg" alt="Stubby Locked">
-                    <h3>LOCKED</h3>
-                    <p>20% Dev wallet locked</p>
-                </div>
-            </div>
+                    <h3>LP LOCKED</h3>
+                    <p>10% supply locked</p>
+                    <p>5% Dev Wallet </p>  
+                    <p>5% Marketing Wallet </p>           
         </div>
     </section>
 
