--- a/index.html
+++ b/index.html
@@ -610,10 +610,10 @@
         <div class="container">
             <h3 class="social-title">JOIN THE MOG COMMUNITY</h3>
             <div class="icons-container">
-                <a href="#" class="social-icon">
+                <a href="https://dexscreener.com/base/0x0b0ff813dbed94745b18f86a3fb8bf051c661c2e" class="social-icon">
                     <img src="dexs.png" alt="DexScreener">
                 </a>
-                <a href="#" class="social-icon">
+                <a href="https://www.dextools.io/app/en/base/pair-explorer/0x0b0ff813dbed94745b18f86a3fb8bf051c661c2e?t=1753441534406" class="social-icon">
                     <img src="dext.png" alt="DEXTools">
                 </a>
                 <a href="#" class="social-icon">
