--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                 <a href="https://www.dextools.io/app/en/base/pair-explorer/0x0b0ff813dbed94745b18f86a3fb8bf051c661c2e?t=1753441534406" class="social-icon">
                     <img src="dext.png" alt="DEXTools">
                 </a>
-                <a href="#" class="social-icon">
+                <a href="https://t.me/mogonbasechain" class="social-icon">
                     <img src="tg.png" alt="Telegram">
                 </a>
             </div>
