--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <img src="dext.png" alt="DEXTools">
                 </a>
                 <a href="#" class="social-icon">
-                    <img src="tg.png" alt="Telegram">
+                    <img src="tg.png" alt="https://t.me/monpepemonad">
                 </a>
             </div>
         </div>
