--- a/index.html
+++ b/index.html
@@ -490,22 +490,27 @@
         </div>
     </section>
 
-    <section class="social-icons">
-        <div class="container">
-            <h3 class="social-title">JOIN THE MON PEPE COMMUNITY</h3>
-            <div class="icons-container">
-                <a href="#" class="social-icon">
-                    <img src="dexs.png" alt="DexScreener">
-                </a>
-                <a href="#" class="social-icon">
-                    <img src="dext.png" alt="DEXTools">
-                </a>
-                <a href="#" class="social-icon">
-                    <img src="tg.png" alt="https://t.me/monpepemonad">
-                </a>
-            </div>
+<section class="social-icons">
+    <div class="container">
+        <h3 class="social-title">JOIN THE MON PEPE COMMUNITY</h3>
+        <div class="icons-container">
+
+            <a href="https://dexscreener.com" class="social-icon" target="_blank" rel="noopener noreferrer">
+                <img src="dexs.png" alt="DexScreener">
+            </a>
+
+            <a href="https://www.dextools.io" class="social-icon" target="_blank" rel="noopener noreferrer">
+                <img src="dext.png" alt="DEXTools">
+            </a>
+
+            <a href="https://t.me/monpepemonad" class="social-icon" target="_blank" rel="noopener noreferrer">
+                <img src="tg.png" alt="Telegram">
+            </a>
+
         </div>
-    </section>
+    </div>
+</section>
+
 
     <section class="ca-section">
         <div class="container">
